# nba-pickem

./: .dockerignore  .gitignore  Dockerfile  MODEL_IMPROVEMENT_PLAN.md  Makefile  README.md  alembic.ini  dataloader.py  docker-compose.yml  pyproject.toml  render.yaml  scrapy.cfg  update_dataset.sh
dao/: __init__.py  db.py  game_predictions.py  games.py  matchups.py  moneylines.py  redis.py  teams.py
db/: env.py
db/versions/: 07c8ca775bb8_create_teams_table.py  1fbabf9869b1_populate_teams_table.py  65a64f7a4b1a_create_game_predictions_table.py  8d40020d19c3_add_game_features_to_prediction_models.py  950822567857_change_moneyline_table_to_composite_.py  98ee3c387120_create_moneyline_odds_table.py  c1f71e4bd7ff_create_raw_matchups_table.py  df6987036e84_create_games_table.py  (+2 more)
docs/: MODEL_EXPERIMENT_SUMMARY.md
notebooks/: 00_init.ipynb  01_initial_analysis.ipynb  02_first_model.ipynb  03_improve_model.ipynb  04_combine_odds_data.ipynb  05_examine_weighted_betting.ipynb  06_generate_picks_for_day.ipynb  Data preparation.ipynb  README.md  predict_wins.ipynb
odds_collection/: pipelines.py  settings.py
odds_collection/data/: games.py  (+3 more)
scraping/: README.md  pipelines.py  settings.py
scripts/: README.md  backfill_game_predictions.py  experiment_models.py  load_bball_ref_data.py  prep_nba_games.py  run_extraction.py  run_prediction.py  setup.py  train_model.py  utils.py
services/: README.md  __init__.py  db.py  predictions.py  redis.py
web/: main.py
worker/: __init__.py  game_calculator.py  game_collector.py  game_predictor.py  main.py  nba_model.pkl  nba_model_classifier.pkl  nba_model_regressor.pkl
(+40 files in other folders)
