[project]
name = "nba-pickem"
version = "0.2.0"
description = "NBA game prediction system with ML"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas",
  "joblib",
  "requests",
  "jupyter",
  "matplotlib",
  "numpy",
  "seaborn",
  "scikit-learn",
  "scrapy",
  "crochet",
  "duckdb",
  "basketball-reference-scraper",
]
