[project]
name = "nba-pickem"
version = "0.2.0"
description = "NBA game prediction system with ML"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas",
  "joblib",
  "requests",
  "jupyter",
  "matplotlib",
  "numpy",
  "seaborn",
  "scikit-learn",
  "scrapy",
  "crochet",
  "duckdb",
  "basketball-reference-scraper",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nba-pickem = "nba_pickem.__main__:main"
nba-pickem-init = "nba_pickem.scripts.setup:main"
nba-pickem-train = "nba_pickem.scripts.train_model:main"
nba-pickem-predict = "nba_pickem.scripts.run_prediction:main"
nba-pickem-extract = "nba_pickem.scripts.run_extraction:main"
nba-pickem-load-bball-ref = "nba_pickem.scripts.load_bball_ref_data:main"